--- a/style.css
+++ b/style.css
@@ -8,11 +8,18 @@
 .main-hero {
     max-width: 1200px;
     background: #1f2937;
-    padding-bottom: 4em;
+    padding-bottom: 5em;
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-top: 1em;
 }
+/*  MAIN-HERO */
+
+/* HEADER */
 header {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    margin-bottom: 4em;
 }
 
 .logo {
@@ -30,7 +37,8 @@ header {
     color:antiquewhite;
     text-decoration: none;
 }
-/*  MAIN-HERO */
+/* END HEADER */
+
 
 /* HERO */
 .hero {
@@ -76,7 +84,7 @@ header {
 }
 
 img {
-    width: 300px;
+    width: 100%;
     height: 182px;
 }
 
