--- a/style.css
+++ b/style.css
@@ -89,3 +89,46 @@ img {
 }
 
 /* END HERO */
+
+/* MAIN-CONTAINER */
+.main-container {
+    max-width: 1200px;
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-top: 2em;
+}
+/* END MAIN-CONTAINER */
+
+/* MAIN-INFO */
+.main-info{
+    padding-left: 10%;
+    padding-right: 10%;
+    margin-bottom: 4em;
+}
+
+.main-info h2 {
+    text-align: center;
+    color: #1f2937;
+    font-size: 1.5em;
+    margin-bottom: 1em;
+}
+
+.main-info-quotes {
+    display: flex;
+    justify-content: center;
+    gap: 2em;
+    flex-direction: row;
+}
+.main-info-img {
+    width: 110px;
+    height: 110px;
+    border:3px solid #3882f6;
+    border-radius: 10px;
+    margin-bottom: 0.3em;
+}
+.main-info-p {
+    width: 110px;
+    text-align: center;
+    font-size: 10px;
+}
+/* END MAIN-INFO */
